test/errors/ambiguous_field_type_import.ecsact
package Amby;

component amby {
  i32 ambys_field;
}
